--- a/perezosoropabebes/scss/components/_tablapacks.scss
+++ b/perezosoropabebes/scss/components/_tablapacks.scss
@@ -4,7 +4,7 @@
 
 .tabla{
     width: 50%;
-    color: $color-secundario;
+    color: map-get($map: $colores, $key: color-secundario);
     
     display: flex;
     justify-content: center;
@@ -14,8 +14,10 @@
     &__encabezado{
         font-weight: bold;
         border: 1px solid;
-        background-color: $color-primario ;
-        color: white;
+        background-color: map-get($map: $colores, $key: color-primario );
+        color:map-get($map: $colores, $key:color-blanco );
+        width:150px;
+        
     }
     &__celdas{
         border: 1px solid;
