--- a/perezosoropabebes/style/style.css
+++ b/perezosoropabebes/style/style.css
@@ -24,7 +24,7 @@ ul {
 }
 
 header {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   color: rgb(30, 157, 236);
   padding: 15px;
   display: flex;
@@ -152,13 +152,11 @@ header nav ul li {
 .producto__titulo {
   text-align: center;
   color: rgb(30, 157, 236);
-  text-align: center;
   font-size: 0.9rem;
 }
 .producto__precio {
   text-align: center;
   color: rgb(30, 157, 236);
-  text-align: center;
   font-size: 0.9rem;
 }
 
@@ -219,15 +217,16 @@ footer {
   font-size: 0.8rem;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   padding: 25px;
 }
 footer ul li {
   height: 20px;
-  color: white;
+  color: rgb(255, 255, 255);
   margin: 5px;
 }
 footer a {
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .hero {
@@ -239,7 +238,7 @@ footer a {
   align-items: center;
 }
 .hero__imagen {
-  background: white center/cover no-repeat fixed;
+  background: rgb(255, 255, 255) center/cover no-repeat fixed;
   width: 85%;
   padding: 20px;
   margin: 15px auto;
@@ -262,7 +261,8 @@ footer a {
   font-weight: bold;
   border: 1px solid;
   background-color: rgb(30, 157, 236);
-  color: white;
+  color: rgb(255, 255, 255);
+  width: 150px;
 }
 .tabla__celdas {
   border: 1px solid;
@@ -283,6 +283,10 @@ form a {
   padding: 15px;
 }
 
+.correo {
+  color: rgb(30, 157, 236);
+}
+
 input[type=text], input[type=email], input[type=tel] {
   width: 100%;
   padding: 12px 20px;
@@ -290,7 +294,7 @@ input[type=text], input[type=email], input[type=tel] {
 
 input[type=submit] {
   padding: 12px 20px;
-  color: white;
+  color: rgb(255, 255, 255);
   background-color: rgb(30, 157, 236);
   border: none;
 }
