mejoras texto e imágenes

--- a/perezosoropabebes/style/style.css
+++ b/perezosoropabebes/style/style.css
@@ -68,6 +68,7 @@ header nav ul li {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-around;
+  justify-items: center;
   gap: 10px;
 }
 
