--- a/perezosoropabebes/scss/layout/_categorias.scss
+++ b/perezosoropabebes/scss/layout/_categorias.scss
@@ -4,6 +4,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-around;
+    justify-items: center;
     gap: 10px;
             
 }
