--- a/perezosoropabebes/scss/components/_form.scss
+++ b/perezosoropabebes/scss/components/_form.scss
@@ -27,7 +27,8 @@ input[type=submit]{
     background-color:map-get($map: $colores, $key: color-primario );
     border: none;
     &:hover{
-        background-color: map-get($map: $colores, $key: color-secundario )
+        background-color: map-get($map: $colores, $key: color-secundario );
+        transition: 1s
     }
   }
 
